src/css/main.scss
/* ... */
.interactive-nav {
    &__inner {
        position: relative;
        &:before {
            content: '';
            position: absolute;
            top: -12px;
            left: 0;
            right: 20px;
            height: 2px;
            background-color: $c-bar;
        }
        @include mq(desktop) {
            max-width: 640px;
            &:before {
                left: 0;
            }
        }
    }
     padding-top: 12px;
     padding-bottom: 18px;
     color: rgba(0,0,0,0.3);
     box-sizing: border-box;
     padding-left: 10px;
     position: -webkit-sticky;
     position: sticky;
     border-bottom: 2px solid $c-grey;
     background-color: #eaeaea;
     font-family: 'Guardian Sans Web', 'Guardian Text Sans Web', Helvetica, Arial, sans-serif;
     font-size: 16px;
     line-height: 22px;

     @include mq($until: tablet) {
          padding-left: 20px;
     }

     @include mq(tablet) {
          padding-left: 20px;
     }

     @include mq(leftCol) {
          padding-left: 180px;
     }

     @include mq(wide) {
          padding-left: 260px;
     }

     .android &,
     .ios & {
          position: initial;
     }

     top: -3px;
     z-index: 160;


     a {
        display: inline-block;
        color: $c-grey;
        text-decoration: none;
        padding: 4px 0;
        @include mq(desktop) {
            padding: 0;
        }
        &:hover {
            color: #333;
            &::before {
                color: $c-grey;
            }
        }
        &::before {
            content: '/';
            margin-right: 4px;
            opacity: 0.5;
        }

        &:first-of-type {
            &::before {
                opacity: 0.25;
            }
        }
    }
}

.swiper-pagination-bullet-active {
     border: 1px solid #fff;

     &:first-of-type {
          background-color: $c-con;
          border-color: $c-con;
     }

     &:nth-of-type(2) {
          background-color: $c-lab;
          border-color: $c-lab;
     }

     &:nth-of-type(3) {
          background-color: $c-libdem;
          border-color: $c-libdem;
     }

     &:nth-of-type(4) {
          background-color: $c-snp;
          border-color: $c-snp;
     }
}

.badge-slot {
    width: 62px;
    height: 48px;
}
.content__headline,
.content__headline::before,
.content__section-label__link {
    font-size: 28px;
    line-height: 28px;
}
.content__headline::before {
    color: #333;
    font-weight: 800;
    margin-top: -29px;
    padding-left: 68px;
    display: block;
    width: auto;
    @include mq(tablet) {
        font-size: 72px;
        line-height: 72px;
        margin-top: 12px;
        padding-top: 0;
        margin-left: -67px;
    }
}
.content__section-label__link {
    display: inline-block;
    height: 28px;
    width: 210px;
    overflow: hidden;
    color: #63747C;
    @include mq(375px) {
        overflow: auto;
        width: auto;
    }
    @include mq(tablet) {
        height: auto;
        font-size: 22px;
        line-height: 1em;
        padding-top: 3px;
    }
}
// replaces social media headline
.content__headline {
    font-size: 0;
    width: auto;
    &::before {
        content: "The Manifestos";
    }
}
.content__standfirst {
    color: #767676;
    font-size: 18px;
    line-height: 24px;
    font-weight: 400;
    @include mq(tablet) {
        color: #767676;
        font-size: 22px;
        line-height: 28px;
    }
    a {
        color: #444;
        border-bottom: 1px solid #767676;
        text-decoration: none;
    }
}
.content--interactive .content__meta-container {
    margin-top: 12px;
    min-height: none;
    @include mq(leftCol) {
        margin-top: 0;
        position: absolute;
        z-index: 20;
        top: -60px;
    }

    .meta__extras {
        border-top: 2px solid $c-bar;
    }
    .meta__save-for-later,
    .meta__number,
    .meta__numbers {
        display: none !important;
    }
    .social-icon.social-icon--more {
        background-color: #BDBDBD;
        circle {
            fill: #DCDCDC;
        }
    }
    @include mq(leftCol) {
        width: 140px;
        left: -160px;
    }
    @include mq(wide) {
        width: 220px;
        left: -240px;
    }
}
// removes second date line
.content__head .content__main-column .content__dateline {
    display: none;
}

.content__labels {
    display: block;
}
.content__labels--not-immersive {
    border: 0;
}

.interactive-ad-banner {
    display: flex;
    justify-content: center;
    background-color: guss-colour(white);
    position: relative;
    z-index: 0;

    @include mq($from: tablet) {
        .ad-slot--rendered {
            margin: 20px 0 40px 0;
        }
    }
}

.article-footer {
    padding: 0 20px;
    font-size: 18px;
    line-height: 24px;
    &__wrap-up {
    }
    &__end-notes {
        margin-top: 24px;
        padding-top: 6px;
        border-top: 2px solid $c-bar;
        font-family: 'Guardian Text Sans Web', 'Guardian Sans Web', helvetica, arial, sans-serif;
        color: #767676;
    }
}

